# infix-parser

./: .clang-tidy  .codespellrc  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  flake.nix  vcpkg.json
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt
benchmark/source/: infix-parser_bench.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt  calculator.cpp
include/infix-parser/: ast.hpp  parser.hpp
source/: parser.cpp
test/: CMakeLists.txt
test/source/: infix-parser_test.cpp
